retter name for tagging av docker image på github actions

--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -47,7 +47,7 @@ jobs:
           npm run build
       - name: Create Docker tag
         env:
-          NAME: omsorgspengesoknad
+          NAME: omsorgspengerutbetaling-soknad
         run: |
           echo "docker.pkg.github.com"/"$GITHUB_REPOSITORY"/"$NAME" > .docker_image
           echo "$(date "+%Y.%m.%d")-$(git rev-parse --short HEAD)" > .docker_tag
