--- a/nais/vars.yaml
+++ b/nais/vars.yaml
@@ -1,3 +1,4 @@
-app: omsorgspengerutbetaling-soknad
+appname: omsorgspengerutbetaling-soknad
+teamname: dusseldorf
 path: omsorgspengerutbetaling
 rootpath: /familie/sykdom-i-familien/soknad/
