--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -10,6 +10,9 @@ on:
       - "CODEOWNERS"
     branches:
 
+env:
+  IMAGE: docker.pkg.github.com/${{ github.repository }}/omsorgspengerutbetaling-soknad:${{ github.sha }}
+
 jobs:
   test:
     name: Test Code
@@ -31,7 +34,7 @@ jobs:
 
   build-code-and-push-docker:
     name: Build code and push docker image
-    if: startsWith(github.ref, 'refs/heads/dev-') || startsWith(github.ref, 'refs/heads/master') || github.event.deployment.payload.triggered # Build and push docker if branch is either master or dev-*
+    if: startsWith(github.ref, 'refs/heads/fix/deploy-til-preprod') || startsWith(github.ref, 'refs/heads/dev-') || startsWith(github.ref, 'refs/heads/master') || github.event.deployment.payload.triggered # Build and push docker if branch is either master or dev-*
     needs: test
     runs-on: ubuntu-latest
     steps:
@@ -45,57 +48,25 @@ jobs:
         run: |
           npm ci
           npm run build
-      - name: Create Docker tag
-        env:
-          NAME: omsorgspengerutbetaling-soknad
-        run: |
-          echo "docker.pkg.github.com"/"$GITHUB_REPOSITORY"/"$NAME" > .docker_image
-          echo "$(date "+%Y.%m.%d")-$(git rev-parse --short HEAD)" > .docker_tag
       - name: Build Docker image
         run: |
-          docker build -t $(cat .docker_image):$(cat .docker_tag) .
+          docker build --tag ${IMAGE} .
       - name: Login to Github Package Registry
         env:
-          DOCKER_PASSWORD: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          docker login -u ${GITHUB_REPOSITORY} -p ${DOCKER_PASSWORD} docker.pkg.github.com
-      - name: Push Docker image
-        run: "docker push $(cat .docker_image):$(cat .docker_tag)"
-      - name: pass image file to next job.
-        uses: actions/upload-artifact@v1
-        with:
-          name: docker_image
-          path: .docker_image
-      - name: pass tag file to next job.
-        uses: actions/upload-artifact@v1
-        with:
-          name: docker_tag
-          path: .docker_tag
+          docker login docker.pkg.github.com -u ${GITHUB_REPOSITORY} -p ${GITHUB_TOKEN}
+          docker push ${IMAGE}
 
   deploy-dev-sbs:
     name: deploy-dev-sbs
-    if: startsWith(github.ref, 'refs/heads/dev-') || startsWith(github.ref, 'refs/heads/master') # Build and push docker if branch is either master or dev-*
+    if: startsWith(github.ref, 'refs/heads/fix/deploy-til-preprod') || startsWith(github.ref, 'refs/heads/dev-') || startsWith(github.ref, 'refs/heads/master') # Build and push docker if branch is either master or dev-*
     needs: build-code-and-push-docker # Depends on build-code-and-push-docker job
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v1
-        # Download the image and tag file to use for the deployment cli.
-      - name: Download image file
-        uses: actions/download-artifact@v1
-        with:
-          name: docker_image
-      - name: Download tag file
-        uses: actions/download-artifact@v1
-        with:
-          name: docker_tag
-      - name: unpack
-        run: |
-          cp docker_image/.docker_image .
-          cp docker_tag/.docker_tag .
-      - name: deploy to dev-sbs
-        uses: nais/deploy/actions/deploy@v1
+      - uses: actions/checkout@v1
+      - uses: nais/deploy/actions/deploy@v1
         env:
           APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
-          CLUSTER: dev-sbs
+          CLUSTER: dev-fss
           RESOURCE: nais/dev-sbs.yml
