--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "@formatjs/intl-pluralrules": "^1.5.2",
         "@formatjs/intl-relativetimeformat": "^4.5.9",
         "@navikt/fnrvalidator": "^1.1.0",
+        "@navikt/omsorgspengerutbetaling-schema": "^0.1.3",
         "@navikt/sif-common": "^4.1.2",
         "@testing-library/react": "^9.4.0",
         "axios": "^0.19.2",
