--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
         "@formatjs/intl-relativetimeformat": "^4.5.9",
         "@navikt/fnrvalidator": "^1.1.0",
         "@navikt/omsorgspengerutbetaling-schema": "^0.1.3",
-        "@navikt/sif-common": "^4.1.2",
+        "@navikt/sif-common-core": "0.0.11",
+        "@navikt/sif-common-formik": "^2.2.31",
+        "@navikt/sif-common-forms": "0.0.7",
         "@testing-library/react": "^9.4.0",
         "axios": "^0.19.2",
         "busboy": "^0.3.0",
@@ -62,15 +64,16 @@
         "nav-frontend-alertstriper": "^3.0.9",
         "nav-frontend-chevron": "^1.0.10",
         "nav-frontend-core": "^4.0.10",
-        "nav-frontend-ikoner-assets": "^1.0.2",
+        "nav-frontend-hjelpetekst": "^2.0.24",
+        "nav-frontend-ikoner-assets": "^1.0.5",
         "nav-frontend-js-utils": "^1.0.7",
         "nav-frontend-knapper": "^1.0.39",
         "nav-frontend-lenker": "^1.0.33",
         "nav-frontend-lukknapp": "^1.0.24",
         "nav-frontend-modal": "^1.0.32",
         "nav-frontend-paneler": "^1.0.23",
-        "nav-frontend-skjema": "^1.0.73",
-        "nav-frontend-spinner": "^1.0.21",
+        "nav-frontend-skjema": "^2.0.11",
+        "nav-frontend-spinner": "^2.0.1",
         "nav-frontend-stegindikator": "0.0.40",
         "nav-frontend-typografi": "^2.0.17",
         "nav-frontend-veileder": "^2.0.15",
@@ -126,12 +129,13 @@
         "less-loader": "^5.0.0",
         "nav-frontend-alertstriper-style": "^2.0.7",
         "nav-frontend-chevron-style": "^0.3.5",
+        "nav-frontend-hjelpetekst-style": "^2.0.21",
         "nav-frontend-knapper-style": "^0.3.34",
         "nav-frontend-lenker-style": "^0.2.21",
         "nav-frontend-lukknapp-style": "^0.2.20",
         "nav-frontend-modal-style": "^0.3.30",
         "nav-frontend-paneler-style": "^0.3.16",
-        "nav-frontend-skjema-style": "^1.0.46",
+        "nav-frontend-skjema-style": "^2.0.3",
         "nav-frontend-spinner-style": "^0.2.5",
         "nav-frontend-stegindikator-style": "^1.0.26",
         "nav-frontend-typografi-style": "^1.0.18",
