retter api path

--- a/nais/vars.yaml
+++ b/nais/vars.yaml
@@ -1,4 +1,4 @@
 appname: omsorgspengerutbetaling-soknad
 teamname: dusseldorf
-path: omsorgspengerutbetaling
+path: omsorgspengerutbetalingsoknad
 rootpath: /familie/sykdom-i-familien/soknad/
