--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "@navikt/sif-common-core": "^2.1.0",
         "@navikt/sif-common-formik": "^4.0.4",
         "@navikt/sif-common-forms": "^2.0.1",
+        "@navikt/sif-common-question-config": "0.0.2",
         "@testing-library/react": "^9.4.0",
         "axios": "^0.19.2",
         "busboy": "^0.3.0",
