Use config for isValid and isAvailable

--- a/.env
+++ b/.env
@@ -3,4 +3,4 @@ LOGIN_URL=http://localhost:8081/auth-mock/cookie?subject=mockSubject&redirect_lo
 API_URL=http://localhost:8083
 PUBLIC_PATH=/familie/sykdom-i-familien/soknad/omsorgspengerutbetaling
 UTILGJENGELIG=off
-MELLOMLAGRING=on
+MELLOMLAGRING=off
