Refactured with docker-compose.yml support

--- a/package.json
+++ b/package.json
@@ -8,26 +8,26 @@
     "scripts": {
         "build": "node src/build/scripts/production-build.js",
         "build-heroku": "node src/build/scripts/heroku-build.js",
-        "dev-api": "PORT=8082 node ./api-mock.js",
-        "dev": "npm-run-all -p start-api-mock start-no-decorator",
         "start": "node ./src/build/scripts/start-dev.js",
         "snd": "node ./src/build/scripts/start-dev-no-decorator.js",
         "sam": "PORT=8082 node ./api-mock.js",
+        "dev-api": "PORT=8082 node ./server/api-mock.js",
+        "dev": "npm-run-all -p dev-api start-no-decorator",
         "start-no-decorator": "node ./src/build/scripts/start-dev-no-decorator.js",
         "start-express": "node ./server.js",
-        "start-api-mock": "PORT=8082 node ./api-mock.js",
+        "start-api-mock": "PORT=8082 node ./server/api-mock.js",
         "test": "jest --maxWorkers=2 --config ./jest/jest.config.js",
         "snyk-protect": "snyk protect",
         "prepare": "npm run snyk-protect",
-        "cypress:open": "npm add -D cypress && CYPRESS_baseUrl=http://localhost:8080 cypress open",
-        "cypress:run": "npm add -D cypress && CYPRESS_baseUrl=http://localhost:8080 cypress run",
-        "cypress:ci": "CYPRESS_baseUrl=http://localhost:8080 cypress run --reporter junit --reporter-options \"mochaFile=results/my-test-output.xml\"",
-        "cypress:headless": "docker run --net=\"host\" -e CYPRESS_video=false -e CYPRESS_baseUrl=http://$(ipconfig getifaddr en0):8080 -it -v $PWD:/e2e -w /e2e cypress/included:3.2.0",
-        "e2e": "npm-run-all -p start-api-mock start-no-decorator -r cypress:headless",
-        "e2e-docker-compose": "docker-compose up --build --exit-code-from cypress",
-        "tslint-check": "tslint-config-prettier-check ./tslint.json",
-        "prettier:check": "prettier --check \"src/**/*.js\"",
-        "prettier:run": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\""
+        "cypress:lib-install": "npm add -D cypress cypress-file-upload",
+        "cypress:open": "CYPRESS_baseUrl=http://localhost:8080 cypress open --project $PWD/e2e",
+        "cypress:run": "CYPRESS_baseUrl=http://localhost:8080 cypress run --project $PWD/e2e",
+        "e2e-docker-compose": "docker-compose -f ./e2e/docker-compose.yml up --build --exit-code-from e2e",
+        "e2e-docker-rm": "docker rm $(docker ps -a -f status=exited -q) ",
+        "e2e-docker-rmi": "docker images -a | grep e2e | awk '{print $3}' | xargs docker rmi",
+        "server-test:local": "PORT=8080 UTILGJENGELIG=off MELLOMLAGRING=off API_URL=http://localhost:8082 PUBLIC_PATH=/familie/sykdom-i-familien/soknad/omsorgspengerutbetaling node ./server-test.js",
+        "server-test": "node ./server-test.js",
+        "start-server-local": "npm-run-all -p dev-api server-test:local"
     },
     "jest": {
         "testEnvironment": "node"
