--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,5 +27,7 @@
     "awesomeTypescriptLoaderOptions": {
         "useCache": false
     },
-    "exclude": ["node_modules", "src/build", "**.js", "dist"]
+    "exclude": ["node_modules", "src/build", "**.js", "dist",
+      "e2e/cypress"
+    ]
 }
