Complete workover and testing. Updated integration test to comply with IntroPage.tsx updates.

--- a/package.json
+++ b/package.json
@@ -10,24 +10,26 @@
         "build-heroku": "node src/build/scripts/heroku-build.js",
         "start": "node ./src/build/scripts/start-dev.js",
         "snd": "node ./src/build/scripts/start-dev-no-decorator.js",
-        "sam": "PORT=8082 node ./api-mock.js",
-        "dev-api": "PORT=8082 node ./server/api-mock.js",
+        "sam": "PORT=8083 node ./api-mock.js",
+        "dev-api": "PORT=8083 node ./server/api-mock.js",
         "dev": "npm-run-all -p dev-api start-no-decorator",
         "start-no-decorator": "node ./src/build/scripts/start-dev-no-decorator.js",
         "start-express": "node ./server.js",
-        "start-api-mock": "PORT=8082 node ./server/api-mock.js",
+        "start-api-mock": "PORT=8083 node ./server/api-mock.js",
         "test": "jest --maxWorkers=2 --config ./jest/jest.config.js",
         "snyk-protect": "snyk protect",
         "prepare": "npm run snyk-protect",
+        "rm:dist": "rimraf dist/",
+        "rm:nodemods": "rimraf node_modles/",
         "cypress:lib-install": "npm add -D cypress cypress-file-upload",
         "cypress:open": "CYPRESS_baseUrl=http://localhost:8080 cypress open --project $PWD/e2e",
         "cypress:run": "CYPRESS_baseUrl=http://localhost:8080 cypress run --project $PWD/e2e",
         "e2e-docker-compose": "docker-compose -f ./e2e/docker-compose.yml up --build --exit-code-from e2e",
-        "e2e-docker-rm": "docker rm $(docker ps -a -f status=exited -q) ",
+        "e2e-docker-rm": "docker rm $(docker ps -a -f status=exited -q)",
         "e2e-docker-rmi": "docker images -a | grep e2e | awk '{print $3}' | xargs docker rmi",
-        "server-test:local": "PORT=8080 UTILGJENGELIG=off MELLOMLAGRING=off API_URL=http://localhost:8082 PUBLIC_PATH=/familie/sykdom-i-familien/soknad/omsorgspengerutbetaling node ./server-test.js",
+        "server-test:local": "PORT=8080 UTILGJENGELIG=off MELLOMLAGRING=off API_URL=http://localhost:8083 PUBLIC_PATH=/familie/sykdom-i-familien/soknad/omsorgspengerutbetaling node ./server-test.js",
         "server-test": "node ./server-test.js",
-        "start-server-local": "npm-run-all -p dev-api server-test:local"
+        "start-server-local": "npm-run-all -s rm:dist build -p dev-api server-test:local"
     },
     "jest": {
         "testEnvironment": "node"
@@ -150,6 +152,7 @@
         "prettier": "1.19.1",
         "pretty-quick": "^2.0.0",
         "regenerator-runtime": "^0.13.3",
+        "rimraf": "^3.0.2",
         "source-map-loader": "^0.2.4",
         "style-loader": "^1.1.3",
         "svg-sprite-loader": "4.1.3",
