--- a/.env
+++ b/.env
@@ -1,6 +1,8 @@
 APPRES_CMS_URL=http://appres.nav.no
 LOGIN_URL=http://localhost:8081/auth-mock/cookie?subject=mockSubject&redirect_location=http://localhost:8080
-API_URL=http://localhost:8082
+API_URL=http://localhost:8083
 PUBLIC_PATH=/familie/sykdom-i-familien/soknad/omsorgspengerutbetaling
 UTILGJENGELIG=off
 MELLOMLAGRING=on
+APPSTATUS_PROJECT_ID=ryujtq87
+APPSTATUS_DATASET=staging
