--- a/nais/dev-sbs.yml
+++ b/nais/dev-sbs.yml
@@ -50,3 +50,8 @@ spec:
           value: "off"
         - name: MELLOMLAGRING
           value: "on"
+        - name: APPSTATUS_PROJECT_ID
+          value: "ryujtq87"
+        - name: APPSTATUS_DATASET
+          value: "staging"
+
