--- a/nais/prod-sbs.yml
+++ b/nais/prod-sbs.yml
@@ -52,3 +52,7 @@ spec:
           value: "off"
         - name: MELLOMLAGRING
           value: "on"
+        - name: APPSTATUS_PROJECT_ID
+          value: "ryujtq87"
+        - name: APPSTATUS_DATASET
+          value: "production"
