--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
         "@navikt/sif-common-formik": "^10.0.3",
         "@navikt/sif-common-forms": "^8.0.5",
         "@navikt/sif-common-question-config": "^0.0.2",
-        "@navikt/sif-common-sentry": "^0.0.8",
+        "@navikt/sif-common-sentry": "0.0.11",
         "@sentry/browser": "^5.20.1",
         "@testing-library/react": "^9.4.0",
         "axios": "^0.19.2",
