--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
         "cypress:headless": "docker run --net=\"host\" -e CYPRESS_video=false -e CYPRESS_baseUrl=http://$(ipconfig getifaddr en0):8080 -it -v $PWD:/e2e -w /e2e cypress/included:3.2.0",
         "e2e": "npm-run-all -p start-api-mock start-no-decorator -r cypress:headless",
         "e2e-docker-compose": "docker-compose up --build --exit-code-from cypress",
-        "tslint-check": "tslint-config-prettier-check ./tslint.json",
         "prettier:check": "prettier --check \"src/**/*.js\"",
         "prettier:run": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\""
     },
@@ -95,6 +94,8 @@
         "@types/react-document-title": "^2.0.3",
         "@types/react-dom": "^16.9.8",
         "@types/react-router-dom": "^5.1.5",
+        "@typescript-eslint/eslint-plugin": "^3.8.0",
+        "@typescript-eslint/parser": "^3.8.0",
         "autoprefixer": "^9.8.6",
         "awesome-typescript-loader": "^5.2.1",
         "babel-core": "^7.0.0-bridge.0",
@@ -104,6 +105,13 @@
         "css-loader": "^3.5.3",
         "enzyme": "^3.11.0",
         "enzyme-adapter-react-16": "^1.15.2",
+        "eslint": "^7.6.0",
+        "eslint-config-prettier": "^6.11.0",
+        "eslint-loader": "^4.0.2",
+        "eslint-plugin-jsx-a11y": "^6.3.1",
+        "eslint-plugin-prettier": "^3.1.3",
+        "eslint-plugin-react": "^7.20.5",
+        "eslint-plugin-react-hooks": "^4.0.8",
         "extract-text-webpack-plugin": "^4.0.0-beta.0",
         "html-webpack-harddisk-plugin": "^1.0.2",
         "html-webpack-plugin": "^3.2.0",
@@ -115,7 +123,7 @@
         "npm-run-all": "^4.1.5",
         "postcss-input-range": "^4.0.0",
         "postcss-loader": "^3.0.0",
-        "prettier": "1.19.1",
+        "prettier": "^2.0.2",
         "pretty-quick": "^2.0.0",
         "regenerator-runtime": "^0.13.7",
         "source-map-loader": "^0.2.4",
@@ -123,11 +131,6 @@
         "svg-sprite-loader": "4.1.3",
         "terser-webpack-plugin": "^2.3.6",
         "ts-jest": "^24.3.0",
-        "tslint": "^5.20.0",
-        "tslint-config-prettier": "^1.18.0",
-        "tslint-loader": "^3.5.4",
-        "tslint-plugin-prettier": "^2.1.0",
-        "tslint-react": "^4.2.0",
         "typescript": "3.7.5",
         "webpack": "^4.44.1",
         "webpack-dev-server": "^3.11.0"
