Questions, attachments and summary

--- a/.env
+++ b/.env
@@ -4,5 +4,6 @@ API_URL=http://localhost:8082
 PUBLIC_PATH=/familie/sykdom-i-familien/soknad/omsorgspengerutbetaling
 UTILGJENGELIG=off
 MELLOMLAGRING=on
+STENGT_BHG_SKOLE=on
 APPSTATUS_PROJECT_ID=ryujtq87
 APPSTATUS_DATASET=staging
