--- a/nais/dev-sbs.yml
+++ b/nais/dev-sbs.yml
@@ -50,6 +50,8 @@ spec:
           value: "off"
         - name: MELLOMLAGRING
           value: "on"
+        - name: STENGT_BHG_SKOLE
+          value: "on"
         - name: APPSTATUS_PROJECT_ID
           value: "ryujtq87"
         - name: APPSTATUS_DATASET
