--- a/nais/prod-sbs.yml
+++ b/nais/prod-sbs.yml
@@ -50,6 +50,8 @@ spec:
           value: "on"
         - name: UTILGJENGELIG
           value: "off"
+        - name: STENGT_BHG_SKOLE
+          value: "on"
         - name: MELLOMLAGRING
           value: "on"
         - name: APPSTATUS_PROJECT_ID
