--- a/.env
+++ b/.env
@@ -4,6 +4,7 @@ API_URL=http://localhost:8082
 PUBLIC_PATH=/familie/sykdom-i-familien/soknad/omsorgspengerutbetaling
 UTILGJENGELIG=off
 MELLOMLAGRING=on
+NYNORSK=on
 STENGT_BHG_SKOLE=on
 APPSTATUS_PROJECT_ID=ryujtq87
 APPSTATUS_DATASET=staging
