--- a/nais/dev-sbs.yml
+++ b/nais/dev-sbs.yml
@@ -52,6 +52,8 @@ spec:
           value: "on"
         - name: STENGT_BHG_SKOLE
           value: "on"
+        - name: NYNORSK
+          value: "on"
         - name: APPSTATUS_PROJECT_ID
           value: "ryujtq87"
         - name: APPSTATUS_DATASET
