--- a/nais/prod-sbs.yml
+++ b/nais/prod-sbs.yml
@@ -52,6 +52,8 @@ spec:
           value: "off"
         - name: STENGT_BHG_SKOLE
           value: "on"
+        - name: NYNORSK
+          value: "off"
         - name: MELLOMLAGRING
           value: "on"
         - name: APPSTATUS_PROJECT_ID
