Toggle on nynorsk

--- a/nais/prod-sbs.yml
+++ b/nais/prod-sbs.yml
@@ -53,7 +53,7 @@ spec:
         - name: STENGT_BHG_SKOLE
           value: "on"
         - name: NYNORSK
-          value: "off"
+          value: "on"
         - name: MELLOMLAGRING
           value: "on"
         - name: APPSTATUS_PROJECT_ID
