--- a/package.json
+++ b/package.json
@@ -34,13 +34,13 @@
         "@formatjs/intl-pluralrules": "^4.0.5",
         "@navikt/fnrvalidator": "^1.1.3",
         "@navikt/omsorgspengerutbetaling-schema": "^0.1.3",
-        "@navikt/sif-common-core": "^7.1.8",
-        "@navikt/sif-common-formik": "^13.0.7",
-        "@navikt/sif-common-forms": "^11.0.1",
+        "@navikt/sif-common-core": "^8.0.3",
+        "@navikt/sif-common-formik": "^14.0.1",
+        "@navikt/sif-common-forms": "^12.0.0",
         "@navikt/sif-common-question-config": "^0.0.7",
         "@navikt/sif-common-sentry": "0.0.14",
-        "@sentry/browser": "^5.29.2",
-        "@testing-library/react": "^11.2.2",
+        "@sentry/browser": "^6.0.0",
+        "@testing-library/react": "^11.2.3",
         "axios": "^0.21.1",
         "busboy": "^0.3.1",
         "classnames": "^2.2.6",
@@ -49,8 +49,8 @@
         "express": "^4.17.1",
         "flat": "^5.0.2",
         "formik": "^2.2.6",
-        "fs-extra": "^9.0.1",
-        "helmet": "^4.3.1",
+        "fs-extra": "^9.1.0",
+        "helmet": "^4.4.1",
         "history": "^5.0.0",
         "http-status-codes": "^2.1.4",
         "i18n-iso-countries": "^6.4.0",
@@ -59,7 +59,7 @@
         "jsdom": "^16.4.0",
         "lodash.throttle": "^4.1.1",
         "mustache-express": "^1.3.0",
-        "nav-datovelger": "^9.0.1",
+        "nav-datovelger": "^10.1.0",
         "promise": "^8.1.0",
         "prop-types": "^15.7.2",
         "react": "^17.0.1",
@@ -67,11 +67,11 @@
         "react-collapse": "^5.1.0",
         "react-day-picker": "^7.4.8",
         "react-dom": "^17.0.1",
-        "react-intl": "^5.10.13",
+        "react-intl": "^5.10.16",
         "react-modal": "^3.12.1",
         "react-router-dom": "^5.2.0",
         "react-simple-timefield": "^3.2.3",
-        "snyk": "^1.437.3",
+        "snyk": "^1.437.4",
         "use-media": "^1.4.0"
     },
     "devDependencies": {
@@ -93,19 +93,19 @@
         "@types/react-document-title": "^2.0.4",
         "@types/react-dom": "^17.0.0",
         "@types/react-router-dom": "^5.1.7",
-        "@typescript-eslint/eslint-plugin": "^4.12.0",
-        "@typescript-eslint/parser": "^4.12.0",
-        "autoprefixer": "^9.8.6",
+        "@typescript-eslint/eslint-plugin": "^4.14.0",
+        "@typescript-eslint/parser": "^4.14.0",
+        "autoprefixer": "^10.2.3",
         "awesome-typescript-loader": "^5.2.1",
         "babel-core": "^7.0.0-bridge.0",
         "babel-jest": "^26.6.3",
         "babel-polyfill": "^6.26.0",
         "case-sensitive-paths-webpack-plugin": "^2.3.0",
-        "css-loader": "^3.5.3",
+        "css-loader": "^5.0.1",
         "enzyme": "^3.11.0",
-        "enzyme-adapter-react-16": "^1.15.5",
-        "eslint": "^7.17.0",
-        "eslint-config-prettier": "^7.1.0",
+        "enzyme-adapter-react-16": "^1.15.6",
+        "eslint": "^7.18.0",
+        "eslint-config-prettier": "^7.2.0",
         "eslint-loader": "^4.0.2",
         "eslint-plugin-jsx-a11y": "^6.4.1",
         "eslint-plugin-prettier": "^3.3.1",
@@ -113,26 +113,26 @@
         "eslint-plugin-react-hooks": "^4.2.0",
         "extract-text-webpack-plugin": "^4.0.0-beta.0",
         "html-webpack-harddisk-plugin": "^1.0.2",
-        "html-webpack-plugin": "^3.2.0",
+        "html-webpack-plugin": "^5.0.0-beta.5",
         "intl": "^1.2.5",
         "jest": "^26.6.3",
         "jest-css-modules": "^2.1.0",
         "less": "^3.13.1",
         "less-loader": "^7.2.1",
+        "mini-css-extract-plugin": "^1.3.4",
         "npm-run-all": "^4.1.5",
         "postcss-input-range": "^4.0.0",
-        "postcss-loader": "^3.0.0",
+        "postcss-loader": "^4.1.0",
         "prettier": "^2.2.1",
-        "pretty-quick": "^2.0.2",
+        "pretty-quick": "^3.1.0",
         "regenerator-runtime": "^0.13.7",
-        "source-map-loader": "^1.1.3",
-        "style-loader": "^1.3.0",
-        "svg-sprite-loader": "5.0.0",
-        "terser-webpack-plugin": "^4.2.3",
+        "source-map-loader": "^2.0.0",
+        "style-loader": "^2.0.0",
+        "svg-sprite-loader": "5.2.1",
         "ts-jest": "^26.4.4",
         "typescript": "^4.1.3",
-        "webpack": "^4.44.2",
-        "webpack-dev-server": "^3.11.1"
+        "webpack": "^5.16.0",
+        "webpack-dev-server": "^3.11.2"
     },
     "resolutions": {
         "babel-core": "7.0.0-bridge.0"
