--- a/package.json
+++ b/package.json
@@ -34,17 +34,20 @@
         "@formatjs/intl-pluralrules": "^4.0.5",
         "@navikt/fnrvalidator": "^1.1.3",
         "@navikt/omsorgspengerutbetaling-schema": "^0.1.3",
+        "@navikt/sif-common-amplitude": "^1.2.1",
         "@navikt/sif-common-core": "^8.0.3",
-        "@navikt/sif-common-formik": "^14.0.1",
+        "@navikt/sif-common-formik": "^15.0.1",
         "@navikt/sif-common-forms": "^12.0.0",
         "@navikt/sif-common-question-config": "^0.0.7",
         "@navikt/sif-common-sentry": "0.0.14",
         "@sentry/browser": "^6.0.0",
         "@testing-library/react": "^11.2.3",
+        "amplitude-js": "^7.4.1",
         "axios": "^0.21.1",
         "busboy": "^0.3.1",
         "classnames": "^2.2.6",
         "compression": "^1.7.4",
+        "constate": "^3.1.0",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "flat": "^5.0.2",
@@ -71,7 +74,7 @@
         "react-modal": "^3.12.1",
         "react-router-dom": "^5.2.0",
         "react-simple-timefield": "^3.2.3",
-        "snyk": "^1.437.4",
+        "snyk": "^1.438.0",
         "use-media": "^1.4.0"
     },
     "devDependencies": {
@@ -113,7 +116,7 @@
         "eslint-plugin-react-hooks": "^4.2.0",
         "extract-text-webpack-plugin": "^4.0.0-beta.0",
         "html-webpack-harddisk-plugin": "^1.0.2",
-        "html-webpack-plugin": "^5.0.0-beta.5",
+        "html-webpack-plugin": "^5.0.0-beta.6",
         "intl": "^1.2.5",
         "jest": "^26.6.3",
         "jest-css-modules": "^2.1.0",
