--- a/package.json
+++ b/package.json
@@ -7,14 +7,11 @@
     "author": "NAV",
     "scripts": {
         "build": "node src/build/scripts/production-build.js",
-        "dev-api": "PORT=8082 node ./api-mock.js",
         "dev": "npm-run-all -p start-api-mock start-no-decorator",
         "start": "node ./src/build/scripts/start-dev.js",
-        "snd": "node ./src/build/scripts/start-dev-no-decorator.js",
-        "sam": "PORT=8083 node ./api-mock.js",
         "start-no-decorator": "node ./src/build/scripts/start-dev-no-decorator.js",
         "start-express": "node ./server.js",
-        "start-api-mock": "PORT=8082 node ./api-mock.js",
+        "start-api-mock": "PORT=8083 node ./api-mock/mock-api-server.js",
         "test": "jest --maxWorkers=2 --config ./jest/jest.config.js",
         "snyk-protect": "snyk protect",
         "prepare": "npm run snyk-protect",
