--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
         "@navikt/sif-common-forms": "^13.0.0-beta.4",
         "@navikt/sif-common-question-config": "^0.0.7",
         "@navikt/sif-common-sentry": "0.0.14",
-        "@sentry/browser": "^6.2.1",
+        "@sentry/browser": "^6.2.2",
         "@testing-library/react": "^11.2.5",
         "amplitude-js": "^7.4.4",
         "axios": "^0.21.1",
@@ -57,7 +57,7 @@
         "i18n-iso-countries": "^6.5.0",
         "iso8601-duration": "^1.3.0",
         "js-cookie": "^2.2.1",
-        "jsdom": "^16.5.0",
+        "jsdom": "^16.5.1",
         "lodash.throttle": "^4.1.1",
         "mustache-express": "^1.3.0",
         "nav-datovelger": "^10.1.2",
@@ -72,7 +72,7 @@
         "react-modal": "^3.12.1",
         "react-router-dom": "^5.2.0",
         "react-simple-timefield": "^3.2.3",
-        "snyk": "^1.479.0",
+        "snyk": "^1.487.0",
         "use-media": "^1.4.0"
     },
     "devDependencies": {
@@ -102,9 +102,9 @@
         "babel-jest": "^26.6.3",
         "babel-polyfill": "^6.26.0",
         "case-sensitive-paths-webpack-plugin": "^2.4.0",
-        "css-loader": "^5.1.1",
+        "css-loader": "^5.1.2",
         "enzyme": "^3.11.0",
-        "eslint": "^7.21.0",
+        "eslint": "^7.22.0",
         "eslint-config-prettier": "^8.1.0",
         "eslint-loader": "^4.0.2",
         "eslint-plugin-jsx-a11y": "^6.4.1",
@@ -121,16 +121,16 @@
         "mini-css-extract-plugin": "^1.3.9",
         "npm-run-all": "^4.1.5",
         "postcss-input-range": "^4.0.0",
-        "postcss-loader": "^5.1.0",
+        "postcss-loader": "^5.2.0",
         "prettier": "^2.2.1",
         "pretty-quick": "^3.1.0",
         "regenerator-runtime": "^0.13.7",
         "source-map-loader": "^2.0.1",
         "style-loader": "^2.0.0",
-        "svg-sprite-loader": "5.2.1",
+        "svg-sprite-loader": "^5.2.1",
         "ts-jest": "^26.5.3",
         "typescript": "^4.2.3",
-        "webpack": "^5.24.4",
+        "webpack": "^5.25.1",
         "webpack-dev-server": "^3.11.2"
     },
     "resolutions": {
