Flytte og utvide barn-steg

--- a/api-mock/data/soker.json5
+++ b/api-mock/data/soker.json5
@@ -3,6 +3,6 @@
   "fornavn":"Test",
   "mellomnavn":null,
   "etternavn":"Testesen",
-  "fodselsnummer":"12345123456",
+  "fødselsnummer":"23038520075",
   "myndig":true
 }
