--- a/api-mock/data/barn.json5
+++ b/api-mock/data/barn.json5
@@ -1,17 +1,6 @@
 {
   "barn": [
-    {
-      "fodselsdato": "1990-01-01",
-      "fornavn": "Barn",
-      "mellomnavn": "Barne",
-      "etternavn": "Barnesen",
-      "aktoer_id": "1"
-    },
-    {
-      "fodselsdato": "1990-01-02",
-      "fornavn": "Mock",
-      "etternavn": "Mocknes",
-      "aktoer_id": "2"
-    }
+      { fødselsdato: '1990-01-02', fornavn: 'Barn', mellomnavn: 'Barne', etternavn: 'Barnesen', aktørId: '1' },
+      { fødselsdato: '1990-01-02', fornavn: 'Mock', etternavn: 'Mocknes', aktørId: '2' }
   ]
 }
