--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "start-express": "node ./server.js",
         "start-api-mock": "PORT=8083 node ./api-mock/mock-api-server.js",
         "test": "jest --maxWorkers=2 --config ./jest/jest.config.js",
+        "test-w": "jest --maxWorkers=2 --config ./jest/jest.config.js --watch",
         "snyk-protect": "snyk protect",
         "prepare": "npm run snyk-protect",
         "cypress:open": "npm add -D cypress && CYPRESS_baseUrl=http://localhost:8080 cypress open",
@@ -28,23 +29,23 @@
         "testEnvironment": "node"
     },
     "dependencies": {
-        "@formatjs/intl-pluralrules": "^4.0.6",
+        "@formatjs/intl-pluralrules": "^4.0.11",
         "@navikt/fnrvalidator": "^1.1.3",
         "@navikt/omsorgspengerutbetaling-schema": "^0.1.3",
         "@navikt/sif-common-amplitude": "^1.2.4",
-        "@navikt/sif-common-core": "^8.3.1",
-        "@navikt/sif-common-formik": "^15.3.2",
-        "@navikt/sif-common-forms": "^12.2.0",
+        "@navikt/sif-common-core": "^8.4.3",
+        "@navikt/sif-common-formik": "^15.4.0",
+        "@navikt/sif-common-forms": "^13.0.0-beta.10",
         "@navikt/sif-common-question-config": "^0.0.7",
         "@navikt/sif-common-sentry": "0.0.14",
-        "@sentry/browser": "^6.1.0",
+        "@sentry/browser": "^6.2.2",
         "@testing-library/react": "^11.2.5",
-        "amplitude-js": "^7.4.2",
+        "amplitude-js": "^7.4.4",
         "axios": "^0.21.1",
         "busboy": "^0.3.1",
         "classnames": "^2.2.6",
         "compression": "^1.7.4",
-        "constate": "^3.1.0",
+        "constate": "^3.2.0",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "flat": "^5.0.2",
@@ -56,10 +57,10 @@
         "i18n-iso-countries": "^6.5.0",
         "iso8601-duration": "^1.3.0",
         "js-cookie": "^2.2.1",
-        "jsdom": "^16.4.0",
+        "jsdom": "^16.5.1",
         "lodash.throttle": "^4.1.1",
         "mustache-express": "^1.3.0",
-        "nav-datovelger": "^10.1.1",
+        "nav-datovelger": "^10.1.2",
         "promise": "^8.1.0",
         "prop-types": "^15.7.2",
         "react": "^17.0.1",
@@ -67,71 +68,69 @@
         "react-collapse": "^5.1.0",
         "react-day-picker": "^7.4.8",
         "react-dom": "^17.0.1",
-        "react-intl": "^5.12.3",
+        "react-intl": "^5.13.2",
         "react-modal": "^3.12.1",
         "react-router-dom": "^5.2.0",
         "react-simple-timefield": "^3.2.3",
-        "snyk": "^1.456.0",
+        "snyk": "^1.487.0",
         "use-media": "^1.4.0"
     },
     "devDependencies": {
-        "@babel/core": "^7.12.16",
-        "@babel/plugin-proposal-object-rest-spread": "^7.12.13",
-        "@babel/plugin-transform-modules-commonjs": "^7.12.13",
-        "@babel/preset-env": "^7.12.16",
+        "@babel/core": "^7.13.10",
+        "@babel/plugin-proposal-object-rest-spread": "^7.13.8",
+        "@babel/plugin-transform-modules-commonjs": "^7.13.8",
+        "@babel/preset-env": "^7.13.10",
         "@babel/preset-react": "^7.12.13",
         "@types/classnames": "^2.2.11",
         "@types/enzyme": "^3.10.8",
-        "@types/enzyme-adapter-react-16": "^1.0.6",
         "@types/flat": "5.0.1",
         "@types/intl": "^1.2.0",
         "@types/jest": "^26.0.20",
         "@types/js-cookie": "^2.2.6",
-        "@types/react": "^17.0.2",
+        "@types/react": "^17.0.3",
         "@types/react-aria-menubutton": "^6.2.7",
         "@types/react-collapse": "^5.0.0",
         "@types/react-document-title": "^2.0.4",
-        "@types/react-dom": "^17.0.1",
+        "@types/react-dom": "^17.0.2",
         "@types/react-router-dom": "^5.1.7",
-        "@typescript-eslint/eslint-plugin": "^4.15.1",
-        "@typescript-eslint/parser": "^4.15.1",
-        "autoprefixer": "^10.2.4",
+        "@typescript-eslint/eslint-plugin": "^4.17.0",
+        "@typescript-eslint/parser": "^4.17.0",
+        "@wojtekmaj/enzyme-adapter-react-17": "^0.4.1",
+        "autoprefixer": "^10.2.5",
         "awesome-typescript-loader": "^5.2.1",
         "babel-core": "^7.0.0-bridge.0",
         "babel-jest": "^26.6.3",
         "babel-polyfill": "^6.26.0",
-        "case-sensitive-paths-webpack-plugin": "^2.3.0",
-        "css-loader": "^5.0.2",
+        "case-sensitive-paths-webpack-plugin": "^2.4.0",
+        "css-loader": "^5.1.2",
         "enzyme": "^3.11.0",
-        "enzyme-adapter-react-16": "^1.15.6",
-        "eslint": "^7.20.0",
-        "eslint-config-prettier": "^7.2.0",
+        "eslint": "^7.22.0",
+        "eslint-config-prettier": "^8.1.0",
         "eslint-loader": "^4.0.2",
         "eslint-plugin-jsx-a11y": "^6.4.1",
         "eslint-plugin-prettier": "^3.3.1",
         "eslint-plugin-react": "^7.22.0",
         "eslint-plugin-react-hooks": "^4.2.0",
-        "extract-text-webpack-plugin": "^4.0.0-beta.0",
         "html-webpack-harddisk-plugin": "^2.0.0",
-        "html-webpack-plugin": "^5.1.0",
+        "html-webpack-plugin": "^5.3.1",
         "intl": "^1.2.5",
         "jest": "^26.6.3",
         "jest-css-modules": "^2.1.0",
-        "less": "^3.13.1",
+        "less": "^4.1.1",
         "less-loader": "^8.0.0",
-        "mini-css-extract-plugin": "^1.3.7",
+        "mini-css-extract-plugin": "^1.3.9",
         "npm-run-all": "^4.1.5",
         "postcss-input-range": "^4.0.0",
-        "postcss-loader": "^5.0.0",
+        "postcss-loader": "^5.2.0",
         "prettier": "^2.2.1",
         "pretty-quick": "^3.1.0",
         "regenerator-runtime": "^0.13.7",
         "source-map-loader": "^2.0.1",
         "style-loader": "^2.0.0",
-        "svg-sprite-loader": "5.2.1",
-        "ts-jest": "^26.5.1",
-        "typescript": "^4.1.5",
-        "webpack": "^5.22.0",
+        "svg-sprite-loader": "^5.2.1",
+        "ts-jest": "^26.5.3",
+        "typescript": "^4.2.3",
+        "webpack": "^5.25.1",
         "webpack-dev-server": "^3.11.2"
     },
     "resolutions": {
