--- a/api-mock/data/barn.json5
+++ b/api-mock/data/barn.json5
@@ -1,4 +1,17 @@
 {
-  "barn": [
+  "barnOppslag": [
+    {
+      "fodselsdato": "1990-01-01",
+      "fornavn": "Barn",
+      "mellomnavn": "Barne",
+      "etternavn": "Barnesen",
+      "aktoer_id": "1"
+    },
+    {
+      "fodselsdato": "1990-01-02",
+      "fornavn": "Mock",
+      "etternavn": "Mocknes",
+      "aktoer_id": "2"
+    }
   ]
 }
