--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
         "@navikt/omsorgspengerutbetaling-schema": "^0.1.3",
         "@navikt/sif-common-amplitude": "^1.2.5",
         "@navikt/sif-common-core": "^8.4.6",
-        "@navikt/sif-common-formik": "^15.4.10",
+        "@navikt/sif-common-formik": "^15.4.11-beta.1",
         "@navikt/sif-common-forms": "^13.0.0-beta.23",
         "@navikt/sif-common-question-config": "^0.0.7",
         "@navikt/sif-common-sentry": "0.0.14",
@@ -63,23 +63,23 @@
         "nav-datovelger": "^11.0.0",
         "promise": "^8.1.0",
         "prop-types": "^15.7.2",
-        "react": "^17.0.1",
+        "react": "^17.0.2",
         "react-aria-menubutton": "^7.0.1",
         "react-collapse": "^5.1.0",
         "react-day-picker": "^7.4.10",
-        "react-dom": "^17.0.1",
+        "react-dom": "^17.0.2",
         "react-intl": "^5.13.5",
         "react-modal": "^3.12.1",
         "react-router-dom": "^5.2.0",
         "react-simple-timefield": "^3.2.3",
-        "snyk": "^1.503.0",
+        "snyk": "^1.508.0",
         "use-media": "^1.4.0"
     },
     "devDependencies": {
         "@babel/core": "^7.13.10",
         "@babel/plugin-proposal-object-rest-spread": "^7.13.8",
         "@babel/plugin-transform-modules-commonjs": "^7.13.8",
-        "@babel/preset-env": "^7.13.10",
+        "@babel/preset-env": "^7.13.12",
         "@babel/preset-react": "^7.12.13",
         "@types/classnames": "^2.2.11",
         "@types/enzyme": "^3.10.8",
@@ -91,10 +91,10 @@
         "@types/react-aria-menubutton": "^6.2.7",
         "@types/react-collapse": "^5.0.0",
         "@types/react-document-title": "^2.0.4",
-        "@types/react-dom": "^17.0.2",
+        "@types/react-dom": "^17.0.3",
         "@types/react-router-dom": "^5.1.7",
-        "@typescript-eslint/eslint-plugin": "^4.18.0",
-        "@typescript-eslint/parser": "^4.18.0",
+        "@typescript-eslint/eslint-plugin": "^4.19.0",
+        "@typescript-eslint/parser": "^4.19.0",
         "@wojtekmaj/enzyme-adapter-react-17": "^0.5.0",
         "autoprefixer": "^10.2.5",
         "awesome-typescript-loader": "^5.2.1",
@@ -109,7 +109,7 @@
         "eslint-loader": "^4.0.2",
         "eslint-plugin-jsx-a11y": "^6.4.1",
         "eslint-plugin-prettier": "^3.3.1",
-        "eslint-plugin-react": "^7.22.0",
+        "eslint-plugin-react": "^7.23.0",
         "eslint-plugin-react-hooks": "^4.2.0",
         "html-webpack-harddisk-plugin": "^2.0.0",
         "html-webpack-plugin": "^5.3.1",
@@ -130,7 +130,7 @@
         "svg-sprite-loader": "^5.2.1",
         "ts-jest": "^26.5.4",
         "typescript": "^4.2.3",
-        "webpack": "^5.27.1",
+        "webpack": "^5.27.2",
         "webpack-dev-server": "^3.11.2"
     },
     "resolutions": {
