--- a/package.json
+++ b/package.json
@@ -33,9 +33,9 @@
         "@navikt/fnrvalidator": "^1.1.3",
         "@navikt/omsorgspengerutbetaling-schema": "^0.1.3",
         "@navikt/sif-common-amplitude": "^1.2.5",
-        "@navikt/sif-common-core": "^8.4.7",
-        "@navikt/sif-common-formik": "^15.4.11-beta.2",
-        "@navikt/sif-common-forms": "^13.0.0-beta.24",
+        "@navikt/sif-common-core": "^8.4.9",
+        "@navikt/sif-common-formik": "^15.5.0",
+        "@navikt/sif-common-forms": "^13.0.0-beta.27",
         "@navikt/sif-common-question-config": "^0.0.7",
         "@navikt/sif-common-sentry": "0.0.14",
         "@sentry/browser": "^6.2.5",
@@ -71,7 +71,7 @@
         "react-modal": "^3.12.1",
         "react-router-dom": "^5.2.0",
         "react-simple-timefield": "^3.2.3",
-        "snyk": "^1.522.0",
+        "snyk": "^1.525.0",
         "use-media": "^1.4.0"
     },
     "devDependencies": {
