--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
         "@navikt/omsorgspengerutbetaling-schema": "^0.1.3",
         "@navikt/sif-common-amplitude": "^1.2.5",
         "@navikt/sif-common-core": "^8.5.0",
-        "@navikt/sif-common-formik": "^15.5.0",
-        "@navikt/sif-common-forms": "^13.0.0-beta.35",
+        "@navikt/sif-common-formik": "^15.5.2",
+        "@navikt/sif-common-forms": "^13.0.3",
         "@navikt/sif-common-question-config": "^0.0.7",
         "@navikt/sif-common-sentry": "0.0.14",
         "@sentry/browser": "^6.2.5",
@@ -71,7 +71,7 @@
         "react-modal": "^3.12.1",
         "react-router-dom": "^5.2.0",
         "react-simple-timefield": "^3.2.3",
-        "snyk": "^1.530.0",
+        "snyk": "^1.531.0",
         "use-media": "^1.4.0"
     },
     "devDependencies": {
