--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
         "@navikt/omsorgspengerutbetaling-schema": "^0.1.3",
         "@navikt/sif-common-amplitude": "^1.2.5",
         "@navikt/sif-common-core": "^9.1.0",
-        "@navikt/sif-common-formik": "^18.0.0-beta.3",
+        "@navikt/sif-common-formik": "^18.0.0",
         "@navikt/sif-common-forms": "^14.0.0-beta.11",
         "@navikt/sif-common-question-config": "^0.0.7",
         "@navikt/sif-common-sentry": "0.1.1",
@@ -71,7 +71,7 @@
         "react-modal": "^3.13.1",
         "react-router-dom": "^5.2.0",
         "react-simple-timefield": "^3.2.3",
-        "snyk": "^1.563.0",
+        "snyk": "^1.564.0",
         "use-media": "^1.4.0"
     },
     "devDependencies": {
