--- a/package.json
+++ b/package.json
@@ -96,7 +96,6 @@
         "@typescript-eslint/parser": "^4.23.0",
         "@wojtekmaj/enzyme-adapter-react-17": "^0.6.1",
         "autoprefixer": "^10.2.5",
-        "awesome-typescript-loader": "^5.2.1",
         "babel-core": "^7.0.0-bridge.0",
         "babel-jest": "^26.6.3",
         "babel-polyfill": "^6.26.0",
@@ -129,6 +128,7 @@
         "style-loader": "^2.0.0",
         "svg-sprite-loader": "^6.0.6",
         "ts-jest": "^26.5.6",
+        "ts-loader": "^9.1.2",
         "typescript": "^4.2.4",
         "webpack": "^5.37.0",
         "webpack-dev-server": "^3.11.2"
