Erstatte IkkeMyndig med IkkeTilgang

--- a/api-mock/data/soker.json5
+++ b/api-mock/data/soker.json5
@@ -1,8 +1,7 @@
 // .json5 allows comments from javascript
 {
-  "fornavn":"Test",
-  "mellomnavn":null,
-  "etternavn":"Testesen",
-  "fødselsnummer":"23038520075",
-  "myndig":true
+    fornavn: 'Test',
+    mellomnavn: null,
+    etternavn: 'Testesen',
+    fødselsnummer: '23038520075',
 }
