Fix dekorator dev, pkg upd

--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
         "@navikt/sif-common-amplitude": "^2.2.3",
         "@navikt/sif-common-core": "^9.6.0",
         "@navikt/sif-common-formik": "^20.5.4",
-        "@navikt/sif-common-forms": "^16.2.4-beta.1",
+        "@navikt/sif-common-forms": "^16.2.4",
         "@navikt/sif-common-question-config": "^0.0.7",
         "@navikt/sif-common-sentry": "0.2.1",
         "@sentry/browser": "^6.16.0",
