--- a/package.json
+++ b/package.json
@@ -28,20 +28,24 @@
         "@navikt/sif-common-formik": "^22.0.2",
         "@navikt/sif-common-forms": "^16.7.0",
         "@navikt/sif-common-sentry": "0.3.1",
-        "@snyk/protect": "^1.950.0",
+        "@snyk/protect": "^1.961.0",
         "axios": "^0.25.0",
         "busboy": "^1.6.0",
         "compression": "^1.7.4",
+        "cookie-parser": "^1.4.6",
         "dotenv": "^16.0.1",
         "express": "^4.18.1",
         "helmet": "^5.1.0",
         "history": "^5.3.0",
-        "jest-environment-jsdom": "^28.1.1",
-        "jsdom": "^19.0.0",
+        "http-proxy-middleware": "^2.0.6",
+        "jest-environment-jsdom": "^28.1.2",
+        "jose": "^4.8.3",
+        "jsdom": "^20.0.0",
         "lodash": "^4.17.21",
         "lodash.throttle": "^4.1.1",
         "mustache-express": "^1.3.2",
         "nav-datovelger": "^12.5.0",
+        "openid-client": "^5.1.7",
         "promise": "^8.1.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
@@ -49,48 +53,48 @@
         "react-router-dom": "^5.3.0"
     },
     "devDependencies": {
-        "@babel/plugin-proposal-object-rest-spread": "^7.18.0",
-        "@babel/plugin-transform-modules-commonjs": "^7.18.2",
-        "@babel/preset-env": "^7.18.2",
-        "@babel/preset-react": "^7.17.12",
+        "@babel/plugin-proposal-object-rest-spread": "^7.18.6",
+        "@babel/plugin-transform-modules-commonjs": "^7.18.6",
+        "@babel/preset-env": "^7.18.6",
+        "@babel/preset-react": "^7.18.6",
         "@types/enzyme": "^3.10.12",
         "@types/intl": "^1.2.0",
-        "@types/jest": "^28.1.1",
+        "@types/jest": "^28.1.3",
         "@types/lodash": "^4.14.182",
         "@types/react": "^17.0.40",
         "@types/react-dom": "^17.0.13",
         "@types/react-router-dom": "^5.3.3",
-        "@typescript-eslint/eslint-plugin": "^5.28.0",
-        "@typescript-eslint/parser": "^5.28.0",
+        "@typescript-eslint/eslint-plugin": "^5.30.0",
+        "@typescript-eslint/parser": "^5.30.0",
         "@wojtekmaj/enzyme-adapter-react-17": "^0.6.7",
         "babel-core": "^7.0.0-bridge.0",
         "babel-polyfill": "^6.26.0",
         "case-sensitive-paths-webpack-plugin": "^2.4.0",
         "css-loader": "^6.7.1",
         "enzyme": "^3.11.0",
-        "eslint": "^8.17.0",
+        "eslint": "^8.18.0",
         "eslint-config-prettier": "^8.5.0",
-        "eslint-plugin-jsx-a11y": "^6.5.1",
-        "eslint-plugin-prettier": "^4.0.0",
-        "eslint-plugin-react": "^7.30.0",
-        "eslint-plugin-react-hooks": "^4.5.0",
-        "eslint-webpack-plugin": "^3.1.1",
+        "eslint-plugin-jsx-a11y": "^6.6.0",
+        "eslint-plugin-prettier": "^4.2.1",
+        "eslint-plugin-react": "^7.30.1",
+        "eslint-plugin-react-hooks": "^4.6.0",
+        "eslint-webpack-plugin": "^3.2.0",
         "html-webpack-harddisk-plugin": "^2.0.0",
         "html-webpack-plugin": "^5.5.0",
         "intl": "^1.2.5",
-        "jest": "^28.1.1",
+        "jest": "^28.1.2",
         "jest-css-modules": "^2.1.0",
         "less": "^4.1.3",
         "less-loader": "^11.0.0",
-        "mini-css-extract-plugin": "^2.6.0",
+        "mini-css-extract-plugin": "^2.6.1",
         "npm-run-all": "^4.1.5",
-        "prettier": "^2.7.0",
+        "prettier": "^2.7.1",
         "source-map-loader": "^4.0.0",
         "ts-jest": "^28.0.5",
-        "ts-loader": "^9.3.0",
-        "typescript": "^4.7.3",
+        "ts-loader": "^9.3.1",
+        "typescript": "^4.7.4",
         "webpack": "^5.73.0",
-        "webpack-dev-server": "^4.9.2"
+        "webpack-dev-server": "^4.9.3"
     },
     "resolutions": {
         "babel-core": "7.0.0-bridge.0"
