Fiks margin i steg

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     },
     "dependencies": {
         "@navikt/sif-common-amplitude": "^2.4.0",
-        "@navikt/sif-common-core": "^11.1.0",
+        "@navikt/sif-common-core": "^12.0.1",
         "@navikt/sif-common-formik": "^22.0.2",
         "@navikt/sif-common-forms": "^16.7.0",
         "@navikt/sif-common-sentry": "0.3.1",
@@ -58,8 +58,8 @@
         "@types/enzyme": "^3.10.12",
         "@types/intl": "^1.2.0",
         "@types/jest": "^28.1.6",
-        "@types/object-hash": "^2.2.1",
         "@types/lodash": "^4.14.182",
+        "@types/object-hash": "^2.2.1",
         "@types/react": "^17.0.40",
         "@types/react-dom": "^17.0.13",
         "@types/react-router-dom": "^5.3.3",
@@ -89,6 +89,7 @@
         "npm-run-all": "^4.1.5",
         "prettier": "^2.7.1",
         "source-map-loader": "^4.0.0",
+        "style-loader": "^3.3.1",
         "ts-jest": "^28.0.7",
         "ts-loader": "^9.3.1",
         "typescript": "^4.7.4",
