Fiks dekorator URL

--- a/nais/naiserator.yml
+++ b/nais/naiserator.yml
@@ -31,6 +31,8 @@ spec:
         outbound:
             rules: 
              - application: k9-brukerdialog-api
+             - application: nav-dekoratoren
+               namespace: personbruker
             external:
             {{#each externalHosts as |host|}}
             - host: {{host}}
